--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
     <title>Registradora</title>
 </head>
-<body>
+<body><div class="titulo">Caja Registradora - Despensa Don CoCo</div>
     <header class="content-header">
         <div>
             <a href="#"><img src="logo.png" class="logo"></a>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="content-total">
-            <p>Total</p> 
+            <p class="parrafo">Total</p> 
             <div class="total">
              $ 0,00
             </div>
@@ -49,7 +49,7 @@
             </table>
         </div>
         <div class="content-vuelto">
-            <p>Vuelto</p>
+            <p class="parrafo">Vuelto</p>
             <div class="vuelto">
                 $ 0,00
                </div>
