--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </div>
     
     <div class="login">
-        <img src="./img/user.png" alt="" class="logo-login"/><br>
-        <form action="">
-            <input class="name" type="text" name="name" placeholder="Usuario" maxlength="15" required/>
-            <input class="passwd" type="password" name="password" placeholder="Contraseña" maxlength="15" required/>
-            <br>
+        <img src="./img/user.png" alt="" class="logo-login"/>
+        <form class="form" action="">
+            <input class="input" type="text" name="name" placeholder="Usuario" maxlength="15" required/>
+            <input class="input" type="password" name="password" placeholder="Contraseña" maxlength="15" required/>
+            
             <button class="send" type="submit" name="send">Iniciar Sesión</button>
         </form>    
     </div>
